print.css: Avoid pagebreak inside SLA chart/tables
Like bug #5171, but not quite.

--- a/application/views/themes/default/css/default/print.css
+++ b/application/views/themes/default/css/default/print.css
@@ -67,6 +67,8 @@ h1 {
 	float: right;
 }
 
-.pie-chart {
+.setup-table,
+.pie-chart,
+.sla_table {
 	page-break-inside: avoid;
 }
